backend/src/Interprete/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMA
    COMENTARIOLINEA
    COMENTARIOMULTILINEA

Grammar

Rule 0     S' -> sentencias_bucle
Rule 1     sentencias_bucle -> sentencias_bucle sentencia_bucle
Rule 2     sentencias_bucle -> sentencia_bucle
Rule 3     sentencia_bucle -> sentencia
Rule 4     programa -> sentencias
Rule 5     sentencias -> sentencias sentencia
Rule 6     sentencias -> sentencia
Rule 7     sentencias -> <empty>
Rule 8     sentencia -> PRINT PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_Y_COMA
Rule 9     sentencia -> declaracion
Rule 10    sentencia -> asignacion
Rule 11    sentencia -> sentenciaIf
Rule 12    sentencia -> BREAK PUNTO_Y_COMA
Rule 13    sentencia -> CONTINUE PUNTO_Y_COMA
Rule 14    sentencia -> WHILE PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER
Rule 15    sentencia -> FOR PARENTESIS_IZQ inicio_for condicion PUNTO_Y_COMA actualizacion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER
Rule 16    sentencia -> DO LLAVE_IZQ sentencias LLAVE_DER WHILE PARENTESIS_IZQ condicion PARENTESIS_DER
Rule 17    inicio_for -> asignacion
Rule 18    inicio_for -> declaracion_valor
Rule 19    actualizacion -> IDENTIFICADOR INCREMENTO
Rule 20    actualizacion -> IDENTIFICADOR DECREMENTO
Rule 21    actualizacion -> IDENTIFICADOR IGUAL expresion
Rule 22    sentencia -> IDENTIFICADOR INCREMENTO PUNTO_Y_COMA
Rule 23    sentencia -> IDENTIFICADOR DECREMENTO PUNTO_Y_COMA
Rule 24    asignacion -> IDENTIFICADOR IGUAL expresion PUNTO_Y_COMA
Rule 25    declaracion -> declaracion_valor
Rule 26    declaracion -> declaracion_sin_valor
Rule 27    declaracion_valor -> tipo IDENTIFICADOR IGUAL expresion PUNTO_Y_COMA
Rule 28    declaracion_sin_valor -> tipo IDENTIFICADOR PUNTO_Y_COMA
Rule 29    expresion -> MENOS expresion
Rule 30    expresion -> expresion POTENCIA expresion
Rule 31    expresion -> expresion MULTIPLICACION expresion
Rule 32    expresion -> expresion DIVISION expresion
Rule 33    expresion -> expresion MAS expresion
Rule 34    expresion -> expresion MENOS expresion
Rule 35    relacional -> expresion IGUALQUE expresion
Rule 36    relacional -> expresion DIFERENTEQUE expresion
Rule 37    relacional -> expresion MAYORQUE expresion
Rule 38    relacional -> expresion MAYORIGUALQUE expresion
Rule 39    relacional -> expresion MENORQUE expresion
Rule 40    relacional -> expresion MENORIGUALQUE expresion
Rule 41    logica -> NOT expresion
Rule 42    logica -> expresion XOR expresion
Rule 43    logica -> expresion AND expresion
Rule 44    logica -> expresion OR expresion
Rule 45    expresion -> expresion MODULO expresion
Rule 46    expresion -> relacional
Rule 47    expresion -> logica
Rule 48    expresion -> IDENTIFICADOR
Rule 49    logica -> TRUE
Rule 50    logica -> FALSE
Rule 51    logica -> IDENTIFICADOR
Rule 52    expresion -> ENTERO
Rule 53    expresion -> FLOTANTE
Rule 54    expresion -> TRUE
Rule 55    expresion -> FALSE
Rule 56    expresion -> CADENA
Rule 57    expresion -> CARACTER
Rule 58    expresion -> expresion_agrupada
Rule 59    expresion_agrupada -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 60    sentenciaIf -> IF PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER
Rule 61    sentenciaIf -> IF PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER ELSE LLAVE_IZQ selse LLAVE_DER
Rule 62    selse -> sentencias
Rule 63    sentenciaIf -> IF PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER ELSE sentenciaIf
Rule 64    sentencia -> SWITCH PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ cases LLAVE_DER
Rule 65    cases -> cases case
Rule 66    cases -> case
Rule 67    case -> CASE expresion DOS_PUNTOS sentencias BREAK PUNTO_Y_COMA
Rule 68    case -> DEFAULT DOS_PUNTOS sentencias BREAK PUNTO_Y_COMA
Rule 69    condicion -> logica
Rule 70    condicion -> relacional
Rule 71    tipo -> TIPO_INT
Rule 72    tipo -> TIPO_FLOAT
Rule 73    tipo -> TIPO_BOOL
Rule 74    tipo -> TIPO_CHAR
Rule 75    tipo -> TIPO_STR

Terminals, with rules where they appear

AND                  : 43
BREAK                : 12 67 68
CADENA               : 56
CARACTER             : 57
CASE                 : 67
COMA                 : 
COMENTARIOLINEA      : 
COMENTARIOMULTILINEA : 
CONTINUE             : 13
DECREMENTO           : 20 23
DEFAULT              : 68
DIFERENTEQUE         : 36
DIVISION             : 32
DO                   : 16
DOS_PUNTOS           : 67 68
ELSE                 : 61 63
ENTERO               : 52
FALSE                : 50 55
FLOTANTE             : 53
FOR                  : 15
IDENTIFICADOR        : 19 20 21 22 23 24 27 28 48 51
IF                   : 60 61 63
IGUAL                : 21 24 27
IGUALQUE             : 35
INCREMENTO           : 19 22
LLAVE_DER            : 14 15 16 60 61 61 63 64
LLAVE_IZQ            : 14 15 16 60 61 61 63 64
MAS                  : 33
MAYORIGUALQUE        : 38
MAYORQUE             : 37
MENORIGUALQUE        : 40
MENORQUE             : 39
MENOS                : 29 34
MODULO               : 45
MULTIPLICACION       : 31
NOT                  : 41
OR                   : 44
PARENTESIS_DER       : 8 14 15 16 59 60 61 63 64
PARENTESIS_IZQ       : 8 14 15 16 59 60 61 63 64
POTENCIA             : 30
PRINT                : 8
PUNTO_Y_COMA         : 8 12 13 15 22 23 24 27 28 67 68
SWITCH               : 64
TIPO_BOOL            : 73
TIPO_CHAR            : 74
TIPO_FLOAT           : 72
TIPO_INT             : 71
TIPO_STR             : 75
TRUE                 : 49 54
WHILE                : 14 16
XOR                  : 42
error                : 

Nonterminals, with rules where they appear

actualizacion        : 15
asignacion           : 10 17
case                 : 65 66
cases                : 64 65
condicion            : 14 15 16 60 61 63
declaracion          : 9
declaracion_sin_valor : 26
declaracion_valor    : 18 25
expresion            : 8 21 24 27 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 42 42 43 43 44 44 45 45 59 64 67
expresion_agrupada   : 58
inicio_for           : 15
logica               : 47 69
programa             : 
relacional           : 46 70
selse                : 61
sentencia            : 3 5 6
sentenciaIf          : 11 63
sentencia_bucle      : 1 2
sentencias           : 4 5 14 15 16 60 61 62 63 67 68
sentencias_bucle     : 1 0
tipo                 : 27 28

Parsing method: LALR

state 0

    (0) S' -> . sentencias_bucle
    (1) sentencias_bucle -> . sentencias_bucle sentencia_bucle
    (2) sentencias_bucle -> . sentencia_bucle
    (3) sentencia_bucle -> . sentencia
    (8) sentencia -> . PRINT PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_Y_COMA
    (9) sentencia -> . declaracion
    (10) sentencia -> . asignacion
    (11) sentencia -> . sentenciaIf
    (12) sentencia -> . BREAK PUNTO_Y_COMA
    (13) sentencia -> . CONTINUE PUNTO_Y_COMA
    (14) sentencia -> . WHILE PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER
    (15) sentencia -> . FOR PARENTESIS_IZQ inicio_for condicion PUNTO_Y_COMA actualizacion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER
    (16) sentencia -> . DO LLAVE_IZQ sentencias LLAVE_DER WHILE PARENTESIS_IZQ condicion PARENTESIS_DER
    (22) sentencia -> . IDENTIFICADOR INCREMENTO PUNTO_Y_COMA
    (23) sentencia -> . IDENTIFICADOR DECREMENTO PUNTO_Y_COMA
    (64) sentencia -> . SWITCH PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ cases LLAVE_DER
    (25) declaracion -> . declaracion_valor
    (26) declaracion -> . declaracion_sin_valor
    (24) asignacion -> . IDENTIFICADOR IGUAL expresion PUNTO_Y_COMA
    (60) sentenciaIf -> . IF PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER
    (61) sentenciaIf -> . IF PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER ELSE LLAVE_IZQ selse LLAVE_DER
    (63) sentenciaIf -> . IF PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER ELSE sentenciaIf
    (27) declaracion_valor -> . tipo IDENTIFICADOR IGUAL expresion PUNTO_Y_COMA
    (28) declaracion_sin_valor -> . tipo IDENTIFICADOR PUNTO_Y_COMA
    (71) tipo -> . TIPO_INT
    (72) tipo -> . TIPO_FLOAT
    (73) tipo -> . TIPO_BOOL
    (74) tipo -> . TIPO_CHAR
    (75) tipo -> . TIPO_STR

    PRINT           shift and go to state 4
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    DO              shift and go to state 12
    IDENTIFICADOR   shift and go to state 13
    SWITCH          shift and go to state 14
    IF              shift and go to state 17
    TIPO_INT        shift and go to state 19
    TIPO_FLOAT      shift and go to state 20
    TIPO_BOOL       shift and go to state 21
    TIPO_CHAR       shift and go to state 22
    TIPO_STR        shift and go to state 23

    sentencias_bucle               shift and go to state 1
    sentencia_bucle                shift and go to state 2
    sentencia                      shift and go to state 3
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    sentenciaIf                    shift and go to state 7
    declaracion_valor              shift and go to state 15
    declaracion_sin_valor          shift and go to state 16
    tipo                           shift and go to state 18

state 1

    (0) S' -> sentencias_bucle .
    (1) sentencias_bucle -> sentencias_bucle . sentencia_bucle
    (3) sentencia_bucle -> . sentencia
    (8) sentencia -> . PRINT PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_Y_COMA
    (9) sentencia -> . declaracion
    (10) sentencia -> . asignacion
    (11) sentencia -> . sentenciaIf
    (12) sentencia -> . BREAK PUNTO_Y_COMA
    (13) sentencia -> . CONTINUE PUNTO_Y_COMA
    (14) sentencia -> . WHILE PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER
    (15) sentencia -> . FOR PARENTESIS_IZQ inicio_for condicion PUNTO_Y_COMA actualizacion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER
    (16) sentencia -> . DO LLAVE_IZQ sentencias LLAVE_DER WHILE PARENTESIS_IZQ condicion PARENTESIS_DER
    (22) sentencia -> . IDENTIFICADOR INCREMENTO PUNTO_Y_COMA
    (23) sentencia -> . IDENTIFICADOR DECREMENTO PUNTO_Y_COMA
    (64) sentencia -> . SWITCH PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ cases LLAVE_DER
    (25) declaracion -> . declaracion_valor
    (26) declaracion -> . declaracion_sin_valor
    (24) asignacion -> . IDENTIFICADOR IGUAL expresion PUNTO_Y_COMA
    (60) sentenciaIf -> . IF PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER
    (61) sentenciaIf -> . IF PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER ELSE LLAVE_IZQ selse LLAVE_DER
    (63) sentenciaIf -> . IF PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER ELSE sentenciaIf
    (27) declaracion_valor -> . tipo IDENTIFICADOR IGUAL expresion PUNTO_Y_COMA
    (28) declaracion_sin_valor -> . tipo IDENTIFICADOR PUNTO_Y_COMA
    (71) tipo -> . TIPO_INT
    (72) tipo -> . TIPO_FLOAT
    (73) tipo -> . TIPO_BOOL
    (74) tipo -> . TIPO_CHAR
    (75) tipo -> . TIPO_STR

    PRINT           shift and go to state 4
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    WHILE           shift and go to state 10
    FOR             shift and go to state 11
    DO              shift and go to state 12
    IDENTIFICADOR   shift and go to state 13
    SWITCH          shift and go to state 14
    IF              shift and go to state 17
    TIPO_INT        shift and go to state 19
    TIPO_FLOAT      shift and go to state 20
    TIPO_BOOL       shift and go to state 21
    TIPO_CHAR       shift and go to state 22
    TIPO_STR        shift and go to state 23

    sentencia_bucle                shift and go to state 24
    sentencia                      shift and go to state 3
    declaracion                    shift and go to state 5
    asignacion                     shift and go to state 6
    sentenciaIf                    shift and go to state 7
    declaracion_valor              shift and go to state 15
    declaracion_sin_valor          shift and go to state 16
    tipo                           shift and go to state 18

state 2

    (2) sentencias_bucle -> sentencia_bucle .

    PRINT           reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    BREAK           reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    CONTINUE        reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    WHILE           reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    FOR             reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    DO              reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    IDENTIFICADOR   reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    SWITCH          reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    IF              reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    TIPO_INT        reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    TIPO_FLOAT      reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    TIPO_BOOL       reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    TIPO_CHAR       reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    TIPO_STR        reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)
    $end            reduce using rule 2 (sentencias_bucle -> sentencia_bucle .)


state 3

    (3) sentencia_bucle -> sentencia .

    PRINT           reduce using rule 3 (sentencia_bucle -> sentencia .)
    BREAK           reduce using rule 3 (sentencia_bucle -> sentencia .)
    CONTINUE        reduce using rule 3 (sentencia_bucle -> sentencia .)
    WHILE           reduce using rule 3 (sentencia_bucle -> sentencia .)
    FOR             reduce using rule 3 (sentencia_bucle -> sentencia .)
    DO              reduce using rule 3 (sentencia_bucle -> sentencia .)
    IDENTIFICADOR   reduce using rule 3 (sentencia_bucle -> sentencia .)
    SWITCH          reduce using rule 3 (sentencia_bucle -> sentencia .)
    IF              reduce using rule 3 (sentencia_bucle -> sentencia .)
    TIPO_INT        reduce using rule 3 (sentencia_bucle -> sentencia .)
    TIPO_FLOAT      reduce using rule 3 (sentencia_bucle -> sentencia .)
    TIPO_BOOL       reduce using rule 3 (sentencia_bucle -> sentencia .)
    TIPO_CHAR       reduce using rule 3 (sentencia_bucle -> sentencia .)
    TIPO_STR        reduce using rule 3 (sentencia_bucle -> sentencia .)
    $end            reduce using rule 3 (sentencia_bucle -> sentencia .)


state 4

    (8) sentencia -> PRINT . PARENTESIS_IZQ expresion PARENTESIS_DER PUNTO_Y_COMA

    PARENTESIS_IZQ  shift and go to state 25


state 5

    (9) sentencia -> declaracion .

    PRINT           reduce using rule 9 (sentencia -> declaracion .)
    BREAK           reduce using rule 9 (sentencia -> declaracion .)
    CONTINUE        reduce using rule 9 (sentencia -> declaracion .)
    WHILE           reduce using rule 9 (sentencia -> declaracion .)
    FOR             reduce using rule 9 (sentencia -> declaracion .)
    DO              reduce using rule 9 (sentencia -> declaracion .)
    IDENTIFICADOR   reduce using rule 9 (sentencia -> declaracion .)
    SWITCH          reduce using rule 9 (sentencia -> declaracion .)
    IF              reduce using rule 9 (sentencia -> declaracion .)
    TIPO_INT        reduce using rule 9 (sentencia -> declaracion .)
    TIPO_FLOAT      reduce using rule 9 (sentencia -> declaracion .)
    TIPO_BOOL       reduce using rule 9 (sentencia -> declaracion .)
    TIPO_CHAR       reduce using rule 9 (sentencia -> declaracion .)
    TIPO_STR        reduce using rule 9 (sentencia -> declaracion .)
    $end            reduce using rule 9 (sentencia -> declaracion .)
    LLAVE_DER       reduce using rule 9 (sentencia -> declaracion .)


state 6

    (10) sentencia -> asignacion .

    PRINT           reduce using rule 10 (sentencia -> asignacion .)
    BREAK           reduce using rule 10 (sentencia -> asignacion .)
    CONTINUE        reduce using rule 10 (sentencia -> asignacion .)
    WHILE           reduce using rule 10 (sentencia -> asignacion .)
    FOR             reduce using rule 10 (sentencia -> asignacion .)
    DO              reduce using rule 10 (sentencia -> asignacion .)
    IDENTIFICADOR   reduce using rule 10 (sentencia -> asignacion .)
    SWITCH          reduce using rule 10 (sentencia -> asignacion .)
    IF              reduce using rule 10 (sentencia -> asignacion .)
    TIPO_INT        reduce using rule 10 (sentencia -> asignacion .)
    TIPO_FLOAT      reduce using rule 10 (sentencia -> asignacion .)
    TIPO_BOOL       reduce using rule 10 (sentencia -> asignacion .)
    TIPO_CHAR       reduce using rule 10 (sentencia -> asignacion .)
    TIPO_STR        reduce using rule 10 (sentencia -> asignacion .)
    $end            reduce using rule 10 (sentencia -> asignacion .)
    LLAVE_DER       reduce using rule 10 (sentencia -> asignacion .)


state 7

    (11) sentencia -> sentenciaIf .

    PRINT           reduce using rule 11 (sentencia -> sentenciaIf .)
    BREAK           reduce using rule 11 (sentencia -> sentenciaIf .)
    CONTINUE        reduce using rule 11 (sentencia -> sentenciaIf .)
    WHILE           reduce using rule 11 (sentencia -> sentenciaIf .)
    FOR             reduce using rule 11 (sentencia -> sentenciaIf .)
    DO              reduce using rule 11 (sentencia -> sentenciaIf .)
    IDENTIFICADOR   reduce using rule 11 (sentencia -> sentenciaIf .)
    SWITCH          reduce using rule 11 (sentencia -> sentenciaIf .)
    IF              reduce using rule 11 (sentencia -> sentenciaIf .)
    TIPO_INT        reduce using rule 11 (sentencia -> sentenciaIf .)
    TIPO_FLOAT      reduce using rule 11 (sentencia -> sentenciaIf .)
    TIPO_BOOL       reduce using rule 11 (sentencia -> sentenciaIf .)
    TIPO_CHAR       reduce using rule 11 (sentencia -> sentenciaIf .)
    TIPO_STR        reduce using rule 11 (sentencia -> sentenciaIf .)
    $end            reduce using rule 11 (sentencia -> sentenciaIf .)
    LLAVE_DER       reduce using rule 11 (sentencia -> sentenciaIf .)


state 8

    (12) sentencia -> BREAK . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 26


state 9

    (13) sentencia -> CONTINUE . PUNTO_Y_COMA

    PUNTO_Y_COMA    shift and go to state 27


state 10

    (14) sentencia -> WHILE . PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 28


state 11

    (15) sentencia -> FOR . PARENTESIS_IZQ inicio_for condicion PUNTO_Y_COMA actualizacion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 29


state 12

    (16) sentencia -> DO . LLAVE_IZQ sentencias LLAVE_DER WHILE PARENTESIS_IZQ condicion PARENTESIS_DER

    LLAVE_IZQ       shift and go to state 30


state 13

    (22) sentencia -> IDENTIFICADOR . INCREMENTO PUNTO_Y_COMA
    (23) sentencia -> IDENTIFICADOR . DECREMENTO PUNTO_Y_COMA
    (24) asignacion -> IDENTIFICADOR . IGUAL expresion PUNTO_Y_COMA

    INCREMENTO      shift and go to state 31
    DECREMENTO      shift and go to state 32
    IGUAL           shift and go to state 33


state 14

    (64) sentencia -> SWITCH . PARENTESIS_IZQ expresion PARENTESIS_DER LLAVE_IZQ cases LLAVE_DER

    PARENTESIS_IZQ  shift and go to state 34


state 15

    (25) declaracion -> declaracion_valor .

    PRINT           reduce using rule 25 (declaracion -> declaracion_valor .)
    BREAK           reduce using rule 25 (declaracion -> declaracion_valor .)
    CONTINUE        reduce using rule 25 (declaracion -> declaracion_valor .)
    WHILE           reduce using rule 25 (declaracion -> declaracion_valor .)
    FOR             reduce using rule 25 (declaracion -> declaracion_valor .)
    DO              reduce using rule 25 (declaracion -> declaracion_valor .)
    IDENTIFICADOR   reduce using rule 25 (declaracion -> declaracion_valor .)
    SWITCH          reduce using rule 25 (declaracion -> declaracion_valor .)
    IF              reduce using rule 25 (declaracion -> declaracion_valor .)
    TIPO_INT        reduce using rule 25 (declaracion -> declaracion_valor .)
    TIPO_FLOAT      reduce using rule 25 (declaracion -> declaracion_valor .)
    TIPO_BOOL       reduce using rule 25 (declaracion -> declaracion_valor .)
    TIPO_CHAR       reduce using rule 25 (declaracion -> declaracion_valor .)
    TIPO_STR        reduce using rule 25 (declaracion -> declaracion_valor .)
    $end            reduce using rule 25 (declaracion -> declaracion_valor .)
    LLAVE_DER       reduce using rule 25 (declaracion -> declaracion_valor .)


state 16

    (26) declaracion -> declaracion_sin_valor .

    PRINT           reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    BREAK           reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    CONTINUE        reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    WHILE           reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    FOR             reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    DO              reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    IDENTIFICADOR   reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    SWITCH          reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    IF              reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    TIPO_INT        reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    TIPO_FLOAT      reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    TIPO_BOOL       reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    TIPO_CHAR       reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    TIPO_STR        reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    $end            reduce using rule 26 (declaracion -> declaracion_sin_valor .)
    LLAVE_DER       reduce using rule 26 (declaracion -> declaracion_sin_valor .)


state 17

    (60) sentenciaIf -> IF . PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER
    (61) sentenciaIf -> IF . PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER ELSE LLAVE_IZQ selse LLAVE_DER
    (63) sentenciaIf -> IF . PARENTESIS_IZQ condicion PARENTESIS_DER LLAVE_IZQ sentencias LLAVE_DER ELSE sentenciaIf

    PARENTESIS_IZQ  shift and go to state 35


state 18

    (27) declaracion_valor -> tipo . IDENTIFICADOR IGUAL expresion PUNTO_Y_COMA
    (28) declaracion_sin_valor -> tipo . IDENTIFICADOR PUNTO_Y_COMA

    IDENTIFICADOR   shift and go to state 36


state 19

    (71) tipo -> TIPO_INT .

    IDENTIFICADOR   reduce using rule 71 (tipo -> TIPO_INT .)


state 20

    (72) tipo -> TIPO_FLOAT .

    IDENTIFICADOR   reduce using rule 72 (tipo -> TIPO_FLOAT .)


state 21

    (73) tipo -> TIPO_BOOL .

    IDENTIFICADOR   reduce using rule 73 (tipo -> TIPO_BOOL .)


state 22

    (74) tipo -> TIPO_CHAR .

    IDENTIFICADOR   reduce using rule 74 (tipo -> TIPO_CHAR .)


state 23

    (75) tipo -> TIPO_STR .

    IDENTIFICADOR   reduce using rule 75 (tipo -> TIPO_STR .)


state 24

    (1) sentencias_bucle -> sentencias_bucle sentencia_bucle .

    PRINT           reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    BREAK           reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    CONTINUE        reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    WHILE           reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    FOR             reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    DO              reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    IDENTIFICADOR   reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    SWITCH          reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    IF              reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    TIPO_INT        reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    TIPO_FLOAT      reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    TIPO_BOOL       reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    TIPO_CHAR       reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    TIPO_STR        reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)
    $end            reduce using rule 1 (sentencias_bucle -> sentencias_bucle sentencia_bucle .)


state 25

    (8) sentencia -> PRINT PARENTESIS_IZQ . expresion PARENTESIS_DER PUNTO_Y_COMA
    (29) expresion -> . MENOS expresion
    (30) expresion -> . expresion POTENCIA expresion
    (31) expresion -> . expresion MULTIPLICACION expresion
    (32) expresion -> . expresion DIVISION expresion
    (33) expresion -> . expresion MAS expresion
    (34) expresion -> . expresion MENOS expresion
    (45) expresion -> . expresion MODULO expresion
    (46) expresion -> . relacional
    (47) expresion -> . logica
    (48) expresion -> . IDENTIFICADOR
    (52) expresion -> . ENTERO
    (53) expresion -> . FLOTANTE
    (54) expresion -> . TRUE
    (55) expresion -> . FALSE
    (56) expresion -> . CADENA
    (57) expresion -> . CARACTER
    (58) expresion -> . expresion_agrupada
    (35) relacional -> . expresion IGUALQUE expresion
    (36) relacional -> . expresion DIFERENTEQUE expresion
    (37) relacional -> . expresion MAYORQUE expresion
    (38) relacional -> . expresion MAYORIGUALQUE expresion
    (39) relacional -> . expresion MENORQUE expresion
    (40) relacional -> . expresion MENORIGUALQUE expresion
    (41) logica -> . NOT expresion
    (42) logica -> . expresion XOR expresion
    (43) logica -> . expresion AND expresion
    (44) logica -> . expresion OR expresion
    (49) logica -> . TRUE
    (50) logica -> . FALSE
    (51) logica -> . IDENTIFICADOR
    (59) expresion_agrupada -> . PARENTESIS_IZQ expresion PARENTESIS_DER

    MENOS           shift and go to state 39
    IDENTIFICADOR   shift and go to state 42
    ENTERO          shift and go to state 43
    FLOTANTE        shift and go to state 44
    TRUE            shift and go to state 45
    FALSE           shift and go to state 46
    CADENA          shift and go to state 47
    CARACTER        shift and go to state 48
    NOT             shift and go to state 50
    PARENTESIS_IZQ  shift and go to state 37

    expresion                      shift and go to state 38
    relacional                     shift and go to state 40
    logica                         shift and go to state 41
    expresion_agrupada             shift and go to state 49

state 26

    (12) sentencia -> BREAK PUNTO_Y_COMA .

    PRINT           reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    BREAK           reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    CONTINUE        reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    WHILE           reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    FOR             reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    DO              reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    IDENTIFICADOR   reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    SWITCH          reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    IF              reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    TIPO_INT        reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    TIPO_FLOAT      reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    TIPO_BOOL       reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    TIPO_CHAR       reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    TIPO_STR        reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    $end            reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)
    LLAVE_DER       reduce using rule 12 (sentencia -> BREAK PUNTO_Y_COMA .)


state 27

    (13) sentencia -> CONTINUE PUNTO_Y_COMA .

    PRINT           reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    BREAK           reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    CONTINUE        reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    WHILE           reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    FOR             reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    DO              reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    IDENTIFICADOR   reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    SWITCH          reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    IF              reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    TIPO_INT        reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    TIPO_FLOAT      reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    TIPO_BOOL       reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    TIPO_CHAR       reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    TIPO_STR        reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    $end            reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)
    LLAVE_DER       reduce using rule 13 (sentencia -> CONTINUE PUNTO_Y_COMA .)


state 28
